fixed title on mobile, added drafts

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -6,18 +6,21 @@
   font-family: $secondary-font-family;
   min-height: 56px;
   text-align: center;
-  margin: 1em;
-  // Positioning context for the mobile navigation icon
-  position: relative;
+  margin-top: 15px;
+  position: relative; // Positioning context for the mobile navigation icon
 }
 
 .site-title {
-  font-size: 2.5em;
-  line-height: 1em;
+  font-size: 50px;
+  line-height: 56px;
   display: inline;
   float: left;
   padding-bottom: 5px;
   border-bottom: 2px solid $pop-color;
+
+  @include media-query($on-palm) {
+      font-size: 42px;
+  }
 }
 
 .site-nav {
