--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ $text-color:       $brand-color;
 $content-width:    800px;
 
 $on-palm:          600px;
-$on-laptop:        800px;
+$on-laptop:        700px;
 
 
 
